@@ -34,6 +34,8 @@ Bugfixes
 * Make gallery indexes depend on destination images to avoid
   multithreading race condition (Issue #3361)
 * Mark gallery thumbnails as lazy loading (Issue #2918)
+* Don't consider JPEG images with EXIF thumbnails as animated (Issue
+  #3332)
 
 New in v8.0.4
 =============
